--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 }
 </style>
 
-<div contenteditable="true" class="text">New from&nbsp;<span contenteditable="false" class="unremovable">&nbsp;<span contenteditable="false" class="subs">subscription_title</span></span>&nbsp;</div>
+<h2>Checked in Chrome/Safari/Firefox</h2>
+
+<div contenteditable="true" class="text">Try to delete me&nbsp;<span contenteditable="false" class="unremovable">&nbsp;<span contenteditable="false" class="subs">UnRemovable</span></span>&nbsp;</div>
 
 <script>
 
